--- a/HTTPRequest.csproj
+++ b/HTTPRequest.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0</Version>
+    <Authors>Jorge Lucas</Authors>
+    <Description>C# dll for requests over http</Description>
   </PropertyGroup>
 
   <ItemGroup>
