--- a/HTTPRequest.csproj
+++ b/HTTPRequest.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.4.2</Version>
+    <PackageId>HTTPRequest</PackageId>
     <Authors>Jorge Lucas</Authors>
     <Description>C# dll for requests over http</Description>
+    <RepositoryUrl>https://github.com/lukasrochaaraujo/HTTPRequest</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
