--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-buget.config
+nuget.config
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
