--- a/HTTPRequest.csproj
+++ b/HTTPRequest.csproj
@@ -2,11 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.4.2</Version>
+    <Version>0.5.0</Version>
     <PackageId>HTTPRequest</PackageId>
     <Authors>Jorge Lucas</Authors>
     <Description>C# dll for requests over http</Description>
     <RepositoryUrl>https://github.com/lukasrochaaraujo/HTTPRequest</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>0.5.0.0</AssemblyVersion>
+    <FileVersion>0.5.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
